# sensors-analysis

./: .gitignore  Calibrationcoeficient_setup1.ipynb  Calibrationcoeficient_setup1.py  Characterization_board_setup2.ipynb  README.md  Stability_Board.ipynb  characterization_plan.md  pyproject.toml  requirements.txt
18062024_1R0/: opticaltest_board1R0.ipynb
18062024_1R0/data/: 18062024_1R0_0.0_1064_3.txt  18062024_1R0_0.0_532_1.txt  18062024_1R0_0.1_1064_1.txt  18062024_1R0_0.1_1064_2.txt  18062024_1R0_0.1_1064_3.txt  18062024_1R0_0.1_532_1.txt  (+57 more)
base_report/: __init__.py  base_report.py  base_report_slides.py  example_formulas_slides.py  example_report.py  example_report_slides.py  math_renderer.py  readme.md
calib_report/: config.py  helpers.py  main.py  slides_layout.afdesign
calibration/: batch_calib_analysis.py  config.py  main.py  sanity_checks_config.yaml
characterization/: batch_charact_analysis.py  config.py  json_2_csv.py  main.py  sanity_checks_config.yaml
characterization_report/: __init__.py  config.py  main.py  slides_layout.afdesign
crossboard/: __init__.py  config.py  dataframe.py  main.py  plotter.py  style_spec.py
crossboard_report/: __init__.py  config.py  main.py
dev-docs/: calib_columns_tasks.md  calibration.tasks.md  charact_organization.md  charact_roadmap.md
jupyter_old_version/: Characterization_board_setup2.py  Characterization_board_setup2_summary.md  Opticaltest_board1R0_setup2.py  Stability_Board.ipynb  requirements.txt
scripts/: check_plot_style_contract.sh  run_plot_style_tests.sh
tests/: contract_fixtures.py
(+1388 files in other folders)
